HoverSelect more pretty

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -11,9 +11,15 @@
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Snippet Vault</title>
+        <style>
+            #snippetRoot {
+                height: 100vh;
+                width: 100vw;
+            }
+        </style>
     </head>
     <body>
         <noscript>You need to enable JokeScript in your browser to run this app.</noscript>
-        <div id="snippetRoot" style="height: 100vh; width: 100vw;"></div>
+        <div id="snippetRoot"></div>
     </body>
 </html>
