--- a/src/frontend/public/template.html
+++ b/src/frontend/public/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title><%= htmlWebpackPlugin.options.title %></title>
         <meta charset="utf-8" />
         <link rel="icon" href="favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,8 +9,7 @@
         <meta
           name="description"
           content="Web site created using create-react-app" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="manifest" href="manifest.json" />
         <title>Snippet Vault</title>
         <style>
             #snippetRoot {
